# Bigger-Int

./: .gitignore  CMakeLists.txt  Makefile  clean.sh  test.sh  upload-git.sh
cmake-examples/: CMakeLists.txt
include/: int128.hpp
src/: int128.cpp  test.cpp
